<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Data Storage and Serialization Techniques</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="network_preferences_title">Settings</string>
    <string name="network_wifi_only_title">WiFi Only</string>
    <string name="network_wifi_only_summary_on">On</string>
    <string name="network_wifi_only_summary_off">Off</string>
    <string name="network_retry_count_title">Network retries</string>
    <string name="network_retry_count_summary">%d retries</string>

</resources>
